--- a/2itg_webdev/index.html
+++ b/2itg_webdev/index.html
@@ -16,6 +16,11 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+
+            <h1>Welcome!</h1>
+            <p>Visit and explore UST website.</p>
+
+            <a href=https://www.ust.edu.ph>University of Santo Tomas</a>
         
         <script src="" async defer></script>
     </body>
